--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
   </div>
 </div>
    <!--end make slider -->
+   <!-- make products -->
+   <div class="products">
+    <div class="product"><h1>Hello-Hasti&Leili!</h1>
+        <img src="./images/IMG_4033.JPG" alt="">
+        <p>I Love You</p>
+        <a href="#">Wellcome!</a>
+    </div>
+    <div class="product"><h1>Hello-Hasti&Leili!</h1>
+        <img src="./images/IMG_1580.JPG" alt="">
+        <p>I Love You</p>
+        <a href="#">Wellcome!</a>
+    </div>
+    <div class="product"><h1>Hello-Hasti&Leili!</h1>
+        <img src="./images/IMG_1588.JPG" alt="">
+        <p>I Love You</p>
+        <a href="#">Wellcome!</a>
+    </div>
+   </div>
+   <!--end make products -->
    <!--end make website -->
    <script src="./swiper/swiper-bundle.min.js"></script>
    <script>
